--- a/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
+++ b/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
@@ -31,7 +31,7 @@
   
             <!-- Position Column -->
             <ng-container matColumnDef="certificateId">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> certificateId </th>
               <td mat-cell *matCellDef="let row;let i=index"> {{row.certificateId}} </td>
             </ng-container>
             <ng-container matColumnDef="fuelCode">
