add device form energystore boolean"

--- a/apps/drec-angular-ui/src/app/view/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/add-devices/add-devices.component.html
@@ -262,8 +262,8 @@
                                            <mat-radio-group  formControlName='energyStorage'>
                                             <span >Energy Storage:</span>
 
-                                            <mat-radio-button value="true" checked>True</mat-radio-button>
-                                                <mat-radio-button value="false">False</mat-radio-button>
+                                            <mat-radio-button [value]=true checked>True</mat-radio-button>
+                                                <mat-radio-button [value]=false>False</mat-radio-button>
                                             </mat-radio-group>
                                         <!-- </mat-form-field>
                                          -->
