--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.scss
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.scss
@@ -76,3 +76,6 @@ $danger: #f44336;
     {
       color: $secondary!important;
     }
+    // mat-button:hover{
+    //   background-color: red;
+    // }
