--- a/apps/drec-angular-ui/src/app/view/register/register.component.scss
+++ b/apps/drec-angular-ui/src/app/view/register/register.component.scss
@@ -161,3 +161,32 @@
   margin-top: 16px;
 }
 
+
+.font-siz-cont{
+  font-size: 12px !important;
+}
+.mat-labels-cont{
+  font-size: 10px !important;
+}
+.password-desc{
+  font-size: 10px !important;
+  letter-spacing: 0px;
+  white-space: nowrap;
+}
+.secret-desc{
+  font-size: 10px !important;
+}
+.icon-eye{
+  font-size: 10px !important;
+}
+.icon-eye{
+  .mat-icon{
+    height: 55px !important;
+    font-size: 18px !important;
+  
+  }
+
+}
+.value-fs{
+  font-size: 17px !important;
+}
