--- a/apps/drec-angular-ui/src/app/view/login/login.component.html
+++ b/apps/drec-angular-ui/src/app/view/login/login.component.html
@@ -117,8 +117,8 @@
         <button type="submit" class="btn-primary btn   btn-block">Login</button>
       </div>
       <div class="d-flex justify-content-between pb-4 mb-2 px-3">
-        <p class="mb-0 pb-0">Don't have an account?</p>
-        <p class="mb-0 pb-0"><a routerLink="/register" class="text-warning">Register</a></p>
+        <p class="mb-0 pb-0 font-siz-cont">Don't have an account?</p>
+        <p class="mb-0 pb-0 font-siz-cont"><a routerLink="/register" class="text-warning">Register</a></p>
       </div>
     </form>
   </mat-card>
