design styles added to the my reservation,redemption

--- a/apps/drec-angular-ui/src/app/view/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/alldevices/alldevices.component.html
@@ -1,6 +1,6 @@
 <div class="body-bg">
   <mat-card>
-    <mat-card-header class="d-flex justify-content-between mat-crd-hide align-items-center ">
+    <mat-card-header class="d-flex mb-3 justify-content-between mat-crd-hide align-items-center ">
 
       <div>
         <mat-card-title>
