--- a/apps/drec-angular-ui/src/app/view/alldevices/alldevices.component.scss
+++ b/apps/drec-angular-ui/src/app/view/alldevices/alldevices.component.scss
@@ -5,9 +5,14 @@
     .mat-mdc-card {
       box-shadow: 3px 0px 33px rgba(0, 0, 0, 0.1) !important;
       border: none !important;
+      position: relative;
     }
     .mat-form-filte{
         padding: 0px 10px;
+        position: absolute;
+        top: 6px;
+        right: 10px;
+        width: fit-content;
         // margin-top: -50px !important;
         .filetr-desc{
            
