--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
@@ -7,15 +7,15 @@
 	</mat-card-header>
 	<hr>
 	<mat-card-content>
-		<h2 style="text-align: center;color:#f2be1a;"><b>{{group_name}}</b></h2>
-		<samp style="text-align: center;">groupId:<i>{{group_uid}}</i></samp>
+		<h2 class="text-capitalize group-name mb-0"><b>{{group_name}}</b></h2>
+		<samp class="group-id mb-2 text-capitalize mt-0 pt-0">groupId:<i>{{group_uid}}</i></samp>
 		
 	<ng-container *ngFor="let item of data">
 		
 		<mat-card  class="innermat-card example-card1 border" >
 			<mat-card-header>
 			  <mat-card-title>
-				<a style ="text-align: right;" href= {{energyurl+item.creationBlockHash}} target="_blank">Certificate On Blockchain Explorer</a>
+				<a style ="text-align: right;" href= {{energyurl+item.creationBlockHash}} target="_blank" class="certificate-text text-capitalize">Certificate On Blockchain Explorer</a>
 			  </mat-card-title>
 
 			</mat-card-header>
@@ -24,7 +24,7 @@
 				
 				<div class='content'>
 				<div class='column' >
-					<div class='row'><p><b>Generation Start Date</b>:&nbsp;<!--{{item.generationStartTime+'000'| date:'EEE d MMMM y hh:ss'}} - in UTC:--> {{item.generationStartTimeinUTC}}</p></div>
+					<div class='row '><p><b>Generation Start Date</b>:&nbsp;<!--{{item.generationStartTime+'000'| date:'EEE d MMMM y hh:ss'}} - in UTC:--> {{item.generationStartTimeinUTC}}</p></div>
 				  </div>
 				  <div class='column' >
 					<div class='row'><p><b>Generation End Date</b>:&nbsp;<!--{{item.generationEndTime+'000'| date:'EEE d MMMM y hh:ss'}}  - in UTC:--> {{item.generationEndTimeinUTC}}</p></div>
@@ -33,7 +33,7 @@
 					<div class='row'><p *ngFor="let item1 of item.owners | keyvalue"><b>Amount of Read</b>: &nbsp;{{item1.value}}</p></div>
 				  </div>
 			</div>
-			 <h3>Per Single Device Contribution For Certificate</h3>
+			 <h3 class="fs-text">Per Single Device Contribution For Certificate</h3>
 			 <table mat-table [dataSource]="item.perDeviceCertificateLog">
 				<ng-container matColumnDef="certificate_issuance_startdate">
 				  <th mat-header-cell *matHeaderCellDef>StartDate </th>
