--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.scss
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.scss
@@ -103,6 +103,9 @@ table {
     flex-direction: row;
     height: 100%;
     width: 100%;
+    p{
+      font-size: 13px;
+    }
   }
   
   .column {
@@ -110,6 +113,10 @@ table {
     flex-direction: column;
     flex-grow: 1;
     padding: 5px;
+  }
+  .fs-text{
+    font-size: 13px;
+    margin-left: 4px ;
   }
   // mat-card-subtitle {
   //   font-size: 18px;
@@ -121,5 +128,16 @@ table {
   //   justify-content: center;
   //   display: flex;
   // }
+  .group-name{
+    color: #f2be1a;
+    text-align: center !important;
+  }
+  .group-id{
+    display: flex;
+    justify-content: center;
 
+  }
+  .certificate-text{
+
+  }
   
