--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -1,16 +1,34 @@
 <div class="body-bg">
     <mat-card>
-        <mat-card-header>
+        <!-- <mat-card-header>
             <mat-card-title>
                 <h2 class="pb-0 mb-0 fw-bold text-capitalize">list</h2>
             </mat-card-title>
+        </mat-card-header> -->
+        <mat-card-header class="d-flex justify-content-between mat-crd-hide align-items-center ">
+
+            <div>
+              <mat-card-title>
+                <h2 class="pb-0 mb-0 fw-bold text-capitalize ps-2">List
+                </h2>
+            </mat-card-title>
+            </div>
+            <div class="filter-cont pb-0 mb-0" >
+              <mat-form-field class="mat-form-filte pb-0 mb-0 " >
+                <mat-label class="filter-box pb-0 mb-0 ">Filter</mat-label>
+                <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input class="filetr-desc pb-0 mb-0">
+              </mat-form-field>
+            </div>
+            
+      
+      
         </mat-card-header>
         <hr>
         <mat-card-content>
-            <mat-form-field>
+            <!-- <mat-form-field>
                 <mat-label>Filter</mat-label>
                 <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-            </mat-form-field>
+            </mat-form-field> -->
 
             <!-- <div class="mat-elevation-z8"> -->
                 <table mat-table [dataSource]="dataSource" matSort>
