--- a/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.scss
+++ b/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.scss
@@ -2,9 +2,15 @@
 {
     padding: 35px 30px 35px 30px;
     background: #f2f2f2;
+    width: fit-content;
     .mat-mdc-card
     {
         box-shadow: 3px 0px 33px rgba(0,0,0,0.1)!important;
         border: none!important;
+        overflow-x: auto;
+    }
+    .content.mat-elevation-z8{
+        overflow-x: scroll;
+        width: fit-content;
     }
 }
