--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -1,5 +1,5 @@
 <div class="body-bg">
-    <mat-card>
+    <mat-card *ngIf="!showdevicesinfo">
         <mat-card-header>
             <mat-card-title>
                 <h2 class="pb-0 mb-0 fw-bold text-capitalize">list</h2>
@@ -39,10 +39,10 @@
                         <td mat-cell *matCellDef="let row"> {{row.buyerAddress}} </td>
                     </ng-container> -->
                     <!-- Progress Column -->
-                    <ng-container matColumnDef="capacityRange">
+                    <!-- <ng-container matColumnDef="capacityRange">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity </th>
                         <td mat-cell *matCellDef="let row"> {{row.capacityRange}}% </td>
-                    </ng-container>
+                    </ng-container> -->
 
                     <!-- Name Column -->
                     <ng-container matColumnDef="frequency">
@@ -64,17 +64,22 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Target </th>
                         <td mat-cell *matCellDef="let row"> {{row.targetVolumeInMegaWattHour}} </td>
                     </ng-container>
-                    <ng-container matColumnDef="fuelCode">
+                    <!-- <ng-container matColumnDef="fuelCode">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> FuelCode </th>
                         <td mat-cell *matCellDef="let row"> {{row.fuelCode}} </td>
+                    </ng-container> -->
+                     <ng-container matColumnDef="number Of Device">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> number Of Device </th>
+                        <td mat-cell *matCellDef="let row"> {{row.numberOfdevices}} </td>
                     </ng-container>
                     <ng-container matColumnDef="actions">
                         <th mat-header-cell *matHeaderCellDef>Action</th>
                         <td mat-cell *matCellDef="let row; let i=index;" >
                             <!-- <button>certificate</button> -->
-                            <button class="btn-primary btn btn-sm" [routerLink]="['/certificate']"
-                                [queryParams]="{id: row.devicegroup_uid,name:row.name}" target="_blank">certificate</button>
-                        
+                            <a class="btn-primary btn btn-sm" [routerLink]="['/certificate']"
+                                [queryParams]="{id: row.devicegroup_uid,name:row.name}" target="_blank"><mat-icon>visibility</mat-icon>Certificate</a>
+                               <br>
+                                <button class="btn-primary btn btn-sm"  (click)="DisplayDeviceList(row.deviceIds)"><mat-icon>visibility</mat-icon> Devices</button>
                         </td>
                       </ng-container> 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -88,6 +93,49 @@
 
                 <mat-paginator [pageSize]="pageSize"  aria-label="Select page of users"></mat-paginator>
             <!-- </div> -->
+        </mat-card-content>
+        <mat-card-footer></mat-card-footer>
+    </mat-card>
+
+    <mat-card *ngIf="showdevicesinfo">
+        <mat-card-header>
+            <mat-card-title>
+                <h2 class="pb-0 mb-0 fw-bold text-capitalize">Device information</h2>
+            </mat-card-title>
+        </mat-card-header>
+        <hr>
+        <mat-card-content>
+           
+            <!-- <samp style="text-align: center;">groupId:<i>{{group_uid}}</i></samp>
+             -->
+        <ng-container *ngFor="let item of DevicesList">
+          
+            <mat-card  class="innermat-card example-card1 border" >
+                <mat-card-header>
+                  <mat-card-title>
+                    <h2 style="text-align: center;color:#f2be1a;"><b>{{item.externalId}}</b></h2>
+                  </mat-card-title>
+    
+                </mat-card-header>
+              
+                <mat-card-content>
+                    
+                    <div class='content'>
+                    <div class='column' >
+                        <div class='row'><p><b>Generation Start Date</b>:&nbsp;<!--{{item.generationStartTime+'000'| date:'EEE d MMMM y hh:ss'}} - in UTC:-->sfas</p></div>
+                      </div>
+                      <div class='column' >
+                        <div class='row'><p><b>Generation End Date</b>:&nbsp;<!--{{item.generationEndTime+'000'| date:'EEE d MMMM y hh:ss'}}  - in UTC:--> fdsf</p></div>
+                      </div>
+                      <div class='column'>
+                        <div class='row'><p *ngFor="let item1 of item.owners | keyvalue"><b>Volume</b>: &nbsp;fdfd</p></div>
+                      </div>
+                </div>
+                
+                </mat-card-content>
+              </mat-card>
+            <br>
+            </ng-container>
         </mat-card-content>
         <mat-card-footer></mat-card-footer>
     </mat-card>
