--- a/apps/drec-angular-ui/src/app/view/register/register.component.html
+++ b/apps/drec-angular-ui/src/app/view/register/register.component.html
@@ -210,11 +210,11 @@
                         </mat-form-field>
                         <mat-form-field class="mb-4">
                             <mat-label>Enter your confirmPassword</mat-label>
-                            <input type="password" [type]="hide ? 'confirmPassword' : 'text'" matInput
+                            <input  [type]="hide1 ? 'password' : 'text'" matInput
                                 placeholder="confirm Password *" formControlName="confirmPassword"  >
-                            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                                [attr.aria-pressed]="hide">
-                                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                            <button mat-icon-button matSuffix (click)="hide1 = !hide1" [attr.aria-label]="'Hide password'"
+                                [attr.aria-pressed]="hide1">
+                                <mat-icon>{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
                             </button>
                             <mat-hint>Choose a password of at max 6 characters (upper and/or lower case) and one
                                 number</mat-hint>
