--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -1,23 +1,24 @@
 <div class="body-bg">
     <mat-card *ngIf="!showdevicesinfo">
-       
+
         <mat-card-header class="d-flex justify-content-between mat-crd-hide align-items-center ">
 
             <div>
-              <mat-card-title>
-                <h2 class="pb-0 mb-0 fw-bold text-capitalize ps-2">List
-                </h2>
-            </mat-card-title>
+                <mat-card-title>
+                    <h2 class="pb-0 mb-0 fw-bold text-capitalize ps-2">List
+                    </h2>
+                </mat-card-title>
             </div>
-            <div class="filter-cont pb-0 mb-0" >
-              <mat-form-field class="mat-form-filte pb-0 mb-0 " >
-                <mat-label class="filter-box pb-0 mb-0 ">Filter</mat-label>
-                <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input class="filetr-desc pb-0 mb-0">
-              </mat-form-field>
+            <div class="filter-cont pb-0 mb-0">
+                <mat-form-field class="mat-form-filte pb-0 mb-0 ">
+                    <mat-label class="filter-box pb-0 mb-0 ">Filter</mat-label>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input
+                        class="filetr-desc pb-0 mb-0">
+                </mat-form-field>
             </div>
-            
-      
-      
+
+
+
         </mat-card-header>
         <hr>
         <mat-card-content>
@@ -27,86 +28,88 @@
             </mat-form-field> -->
 
             <!-- <div class="mat-elevation-z8"> -->
-                <table mat-table [dataSource]="dataSource" matSort>
+            <table mat-table [dataSource]="dataSource" matSort>
 
-                    <!-- ID Column -->
-                    <ng-container matColumnDef="serialno">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                        <td mat-cell *matCellDef="let row;let i=index"> {{i+1}} </td>
-                    </ng-container>
+                <!-- ID Column -->
+                <ng-container matColumnDef="serialno">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                    <td mat-cell *matCellDef="let row;let i=index"> {{i+1}} </td>
+                </ng-container>
 
-                    <!-- Progress Column -->
-                    <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-                    </ng-container>
+                <!-- Progress Column -->
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                    <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                </ng-container>
 
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="aggregatedCapacity">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Aggregate Capacity</th>
-                        <td mat-cell *matCellDef="let row"> {{row.aggregatedCapacity}} </td>
-                    </ng-container>
+                <!-- Name Column -->
+                <ng-container matColumnDef="aggregatedCapacity">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Aggregate Capacity</th>
+                    <td mat-cell *matCellDef="let row"> {{row.aggregatedCapacity}} </td>
+                </ng-container>
 
-                    <!-- Fruit Column -->
-                    <!-- <ng-container matColumnDef="buyerAddress">
+                <!-- Fruit Column -->
+                <!-- <ng-container matColumnDef="buyerAddress">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
                         <td mat-cell *matCellDef="let row"> {{row.buyerAddress}} </td>
                     </ng-container> -->
-                    <!-- Progress Column -->
-                    <!-- <ng-container matColumnDef="capacityRange">
+                <!-- Progress Column -->
+                <!-- <ng-container matColumnDef="capacityRange">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity </th>
                         <td mat-cell *matCellDef="let row"> {{row.capacityRange}}% </td>
                     </ng-container> -->
 
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="frequency">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Frequency </th>
-                        <td mat-cell *matCellDef="let row"> {{row.frequency}} </td>
-                    </ng-container>
+                <!-- Name Column -->
+                <ng-container matColumnDef="frequency">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Frequency </th>
+                    <td mat-cell *matCellDef="let row"> {{row.frequency}} </td>
+                </ng-container>
 
-                    <!-- Fruit Column -->
-                    <ng-container matColumnDef="reservationStartDate">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Start </th>
-                        <td mat-cell *matCellDef="let row"> {{row.reservationStartDate| date:'EEE d MMM y'}} </td>
-                    </ng-container>
-                    <!-- Fruit Column -->
-                    <ng-container matColumnDef="reservationEndDate">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> End </th>
-                        <td mat-cell *matCellDef="let row"> {{row.reservationEndDate| date:'EEE d MMM y'}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="targetVolumeInMegaWattHour">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Target </th>
-                        <td mat-cell *matCellDef="let row"> {{row.targetVolumeInMegaWattHour}} </td>
-                    </ng-container>
-                    <!-- <ng-container matColumnDef="fuelCode">
+                <!-- Fruit Column -->
+                <ng-container matColumnDef="reservationStartDate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Start </th>
+                    <td mat-cell *matCellDef="let row"> {{row.reservationStartDate| date:'EEE d MMM y'}} </td>
+                </ng-container>
+                <!-- Fruit Column -->
+                <ng-container matColumnDef="reservationEndDate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> End </th>
+                    <td mat-cell *matCellDef="let row"> {{row.reservationEndDate| date:'EEE d MMM y'}} </td>
+                </ng-container>
+                <ng-container matColumnDef="targetVolumeInMegaWattHour">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Target </th>
+                    <td mat-cell *matCellDef="let row"> {{row.targetVolumeInMegaWattHour}} </td>
+                </ng-container>
+                <!-- <ng-container matColumnDef="fuelCode">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> FuelCode </th>
                         <td mat-cell *matCellDef="let row"> {{row.fuelCode}} </td>
                     </ng-container> -->
-                     <ng-container matColumnDef="number Of Device">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> number Of Device </th>
-                        <td mat-cell *matCellDef="let row"> {{row.numberOfdevices}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="actions">
-                        <th mat-header-cell *matHeaderCellDef>Action</th>
-                        <td mat-cell *matCellDef="let row; let i=index;" >
-                            <!-- <button>certificate</button> -->
-                            <button class="btn-primary btn btn-sm" [routerLink]="['/certificate']"
-                                [queryParams]="{id: row.devicegroup_uid,name:row.name}" target="_blank"><mat-icon>visibility</mat-icon>Certificate</button>
-                               <br>
-                                <!-- <button class="btn-primary btn btn-sm"  (click)="DisplayDeviceList(row.deviceIds)"><mat-icon>visibility</mat-icon> Devices</button> -->
-                                <button class="btn-primary btn btn-sm"  ><mat-icon>visibility</mat-icon> Devices</button>
-                            </td>
-                      </ng-container> 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <ng-container matColumnDef="number Of Device">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> number Of Device </th>
+                    <td mat-cell *matCellDef="let row"> {{row.numberOfdevices}} </td>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef>Action</th>
+                    <td mat-cell *matCellDef="let row; let i=index;">
+                        <!-- <button>certificate</button> -->
+                        <button class="btn-primary btn btn-sm" [routerLink]="['/certificate']"
+                            [queryParams]="{id: row.devicegroup_uid,name:row.name}"
+                            target="_blank"><mat-icon>visibility</mat-icon>Certificate</button>
+                        <br>
+                        <button class="btn-primary btn btn-sm"
+                            (click)="DisplayDeviceList(row.deviceIds)"><mat-icon>visibility</mat-icon> Devices</button>
+                        <!-- <button class="btn-primary btn btn-sm"  ><mat-icon>visibility</mat-icon> Devices</button> -->
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-                    <!-- Row shown when there is no matching data. -->
-                    <tr class="mat-row" *matNoDataRow>
-                        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-                    </tr>
-                </table>
+                <!-- Row shown when there is no matching data. -->
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                </tr>
+            </table>
 
-                <mat-paginator [pageSize]="pageSize"  aria-label="Select page of users"></mat-paginator>
+            <mat-paginator [pageSize]="pageSize" aria-label="Select page of users"></mat-paginator>
             <!-- </div> -->
         </mat-card-content>
         <mat-card-footer></mat-card-footer>
@@ -116,40 +119,126 @@
         <mat-card-header>
             <mat-card-title>
                 <h2 class="pb-0 mb-0 fw-bold text-capitalize">Device information</h2>
+                <button class="btn-primary btn btn-sm" (click)="DisplayList()"><mat-icon>arrow_back</mat-icon> Go
+                    Back</button>
             </mat-card-title>
         </mat-card-header>
         <hr>
         <mat-card-content>
-           
+
             <!-- <samp style="text-align: center;">groupId:<i>{{group_uid}}</i></samp>
              -->
-        <ng-container *ngFor="let item of DevicesList">
-          
-            <mat-card  class="innermat-card example-card1 border" >
-                <mat-card-header>
-                  <mat-card-title>
-                    <h2 style="text-align: center;color:#f2be1a;"><b>{{item.externalId}}</b></h2>
-                  </mat-card-title>
-    
-                </mat-card-header>
-              
-                <mat-card-content>
-                    
-                    <div class='content'>
-                    <div class='column' >
-                        <div class='row'><p><b>Generation Start Date</b>:&nbsp;<!--{{item.generationStartTime+'000'| date:'EEE d MMMM y hh:ss'}} - in UTC:-->sfas</p></div>
-                      </div>
-                      <div class='column' >
-                        <div class='row'><p><b>Generation End Date</b>:&nbsp;<!--{{item.generationEndTime+'000'| date:'EEE d MMMM y hh:ss'}}  - in UTC:--> fdsf</p></div>
-                      </div>
-                      <div class='column'>
-                        <div class='row'><p *ngFor="let item1 of item.owners | keyvalue"><b>Volume</b>: &nbsp;fdfd</p></div>
-                      </div>
-                </div>
-                
-                </mat-card-content>
-              </mat-card>
-            <br>
+            <ng-container *ngFor="let item of DevicesList">
+
+                <mat-card class="innermat-card example-card1 border">
+                    <mat-card-header>
+                        <mat-card-title>
+                            <h2 style="text-align: center;color:#f2be1a;"><b>{{item.externalId}}</b></h2>
+                        </mat-card-title>
+
+                    </mat-card-header>
+
+                    <mat-card-content>
+
+                        <div class='content'>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>projectName
+                                        </b>:&nbsp;<!--{{item.generationStartTime+'000'| date:'EEE d MMMM y hh:ss'}} - in UTC:-->{{item.projectName}}
+                                    </p>
+                                </div>
+                            </div>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>countryCode</b>:&nbsp;<!--{{item.generationEndTime+'000'| date:'EEE d MMMM y hh:ss'}}  - in UTC:-->
+                                        {{item.countryCode}}</p>
+                                </div>
+                            </div>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>Capacity</b>: &nbsp;{{item.capacity}}</p>
+                                </div>
+                            </div>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>createdAt</b>: &nbsp;{{item.createdAt|date:'EEE d MMMM y hh:ss'}}</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class='content'>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>offTaker</b>:&nbsp;<!--{{item.generationEndTime+'000'| date:'EEE d MMMM y hh:ss'}}  - in UTC:-->
+                                        {{
+                                        item.offTaker
+                                        }}</p>
+                                </div>
+                            </div>
+
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>deviceTypeCode</b>: &nbsp;{{item.deviceTypeCode}}</p>
+                                </div>
+                            </div>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>fuelCode</b>: &nbsp;{{
+                                        item.fuelCode
+                                        }}</p>
+                                </div>
+                            </div>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>commissioningDate
+                                        </b>:&nbsp;{{ item.commissioningDatedate| date:'EEE d MMMM y hh:ss'}}
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class='content'>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>deviceDescription
+                                        </b>:&nbsp;{{ item.deviceDescription}}
+                                    </p>
+                                </div>
+                            </div>
+
+
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>meterReadtype</b>: &nbsp;{{item.meterReadtype}}</p>
+                                </div>
+                            </div>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>version</b>: &nbsp;{{item.version}}</p>
+                                </div>
+
+                            </div>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>Status</b>: &nbsp;{{item.status}}</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class='content'>
+                            <div class='column'>
+                                <div class='row'>
+                                    <p><b>SDGBenefits</b>:&nbsp;<!--{{item.generationEndTime+'000'| date:'EEE d MMMM y hh:ss'}}  - in UTC:-->
+                                        {{
+                                        item.SDGBenefits
+                                        }}</p>
+                                </div>
+                            </div>
+                           
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+                <br>
             </ng-container>
         </mat-card-content>
         <mat-card-footer></mat-card-footer>
