--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
@@ -62,6 +62,7 @@
 		  </mat-card>
 		<br>
 		</ng-container>
+		<div *ngIf="data.length==0" style="text-align: center;color: #f2be1a;">No Certificate</div>
 	</mat-card-content>
 </mat-card>
 </div>
