--- a/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
@@ -1,4 +1,5 @@
 <div class="body-bg">
+  <button class="btn-primary btn btn-sm but-cont" routerLink="/device/add">Add New Devices</button>
   <mat-card>
     <mat-card-header class="d-flex mb-3 justify-content-between mat-crd-hide align-items-center ">
 
