--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -6,6 +6,10 @@
       <mat-icon>list</mat-icon>
       <span>All Devices</span>
     </button>
+    <button mat-button class="menu-button"  routerLinkActive="active" routerLink="/organization/information" *ngIf="loginuser.role ==='OrganizationAdmin'">
+      <mat-icon>list</mat-icon>
+      <span>Organization</span>
+    </button>
     <button mat-button class="menu-button" routerLinkActive="active"routerLink="/device/AllList" *ngIf="loginuser.role ==='OrganizationAdmin'">
       <mat-icon>list</mat-icon>
       <span>My Devices</span>
@@ -14,10 +18,11 @@
       <mat-icon>list</mat-icon>
       <span>Add Devices</span>
     </button>
-    <button mat-button class="menu-button"  routerLinkActive="active" routerLink="/organization/information" *ngIf="loginuser.role ==='OrganizationAdmin'">
+    <button mat-button class="menu-button"  routerLinkActive="active" routerLink="/add/read" *ngIf="loginuser.role ==='OrganizationAdmin'">
       <mat-icon>list</mat-icon>
-      <span>Organization</span>
+      <span>Add MeterRead</span>
     </button>
+   
     <button mat-button class="menu-button" routerLinkActive="active" routerLink="/myreservation" *ngIf="loginuser.role ==='Buyer'">
       <mat-icon>list</mat-icon>
       <span>My Reservation</span>
