--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
@@ -33,31 +33,46 @@
 					<div class='row'><p *ngFor="let item1 of item.owners | keyvalue"><b>Volume</b>: &nbsp;{{item1.value}}</p></div>
 				  </div>
 			</div>
-			 <h3 class="fs-text">Per Single Device Contribution For Certificate</h3>
-			 <table mat-table [dataSource]="item.perDeviceCertificateLog">
-				<ng-container matColumnDef="certificate_issuance_startdate">
-				  <th mat-header-cell *matHeaderCellDef>StartDate </th>
-				  <td mat-cell *matCellDef="let element"> {{element.certificate_issuance_startdate}}</td>
-				</ng-container>
-			  
-				<ng-container matColumnDef="certificate_issuance_enddate">
-				  <th mat-header-cell *matHeaderCellDef> EndDate</th>
-				  <td mat-cell *matCellDef="let element"> {{element.certificate_issuance_enddate}}</td>
-				</ng-container>
-			  
-				<ng-container matColumnDef="deviceid">
-				  <th mat-header-cell *matHeaderCellDef> Device Name </th>
-				  <td mat-cell *matCellDef="let element"> {{element.deviceid }} </td>
-				</ng-container>
-				<ng-container matColumnDef="readvalue_watthour">
-					<th mat-header-cell *matHeaderCellDef> Read Value </th>
-					<td mat-cell *matCellDef="let element"> {{element.readvalue_watthour }} </td>
-				  </ng-container>
+			<mat-accordion>
 				
-			  
-				<tr mat-header-row *matHeaderRowDef="innerDisplayedColumns"></tr>
-				<tr mat-row *matRowDef="let row; columns: innerDisplayedColumns;"></tr>
-			  </table>
+				<mat-expansion-panel (opened)="panelOpenState = true"
+									 (closed)="panelOpenState = false">
+				  <mat-expansion-panel-header>
+					<mat-panel-title>
+						<h3 class="fs-text">Per Single Device Contribution For Certificate</h3>
+					</mat-panel-title>
+					<!-- <mat-panel-description>
+					  Currently I am {{panelOpenState ? 'open' : 'closed'}}
+					</mat-panel-description> -->
+				  </mat-expansion-panel-header>
+				  <table mat-table [dataSource]="item.perDeviceCertificateLog">
+					<ng-container matColumnDef="certificate_issuance_startdate">
+					  <th mat-header-cell *matHeaderCellDef>StartDate </th>
+					  <td mat-cell *matCellDef="let element"> {{element.certificate_issuance_startdate}}</td>
+					</ng-container>
+				  
+					<ng-container matColumnDef="certificate_issuance_enddate">
+					  <th mat-header-cell *matHeaderCellDef> EndDate</th>
+					  <td mat-cell *matCellDef="let element"> {{element.certificate_issuance_enddate}}</td>
+					</ng-container>
+				  
+					<ng-container matColumnDef="deviceid">
+					  <th mat-header-cell *matHeaderCellDef> Device Name </th>
+					  <td mat-cell *matCellDef="let element"> {{element.deviceid }} </td>
+					</ng-container>
+					<ng-container matColumnDef="readvalue_watthour">
+						<th mat-header-cell *matHeaderCellDef> Read Value </th>
+						<td mat-cell *matCellDef="let element"> {{element.readvalue_watthour }} </td>
+					  </ng-container>
+					
+				  
+					<tr mat-header-row *matHeaderRowDef="innerDisplayedColumns"></tr>
+					<tr mat-row *matRowDef="let row; columns: innerDisplayedColumns;"></tr>
+				  </table>
+				</mat-expansion-panel>
+			  </mat-accordion>
+			
+		
 			</mat-card-content>
 		  </mat-card>
 		<br>
